Fix: Header nav visibility

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -31,7 +31,7 @@ header ul li{
 
 header ul li button{
     padding: 7px;
-    background-image: linear-gradient(to bottom right, lightskyblue, #6265ff);
+    background-image: linear-gradient(to bottom right, orange, #fc581d);
     color: whitesmoke;
     font-size: large;
     font-weight: bold;
